Add images to sports page
Added images of cars to sport series page and cleaned up errors

--- a/html/sseries.html
+++ b/html/sseries.html
@@ -5,15 +5,38 @@
     <link rel="stylesheet" href="../styles/seriess.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mclaren Sport Series</title>
+    <title>Mclaren Super Series</title>
 </head>
 <body>
     <div style="border: #632A6B groove 1rem;">
         <aside><img style="position: relative; float: left; left: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside>
         <aside><img style="position: relative; float: right; right: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside>
-        <h1><b>Mclaren Sport Series</b></h1>
+        <h1><b>Mclaren Super Series</b></h1>
     </div>
-    
+    <div>
+        <img src="../images/drive.gif" height="700" width="900">
+        <!--Slideshow of like 6 colorways of the cars-->
+    </div>
+    <div>
+        <!-- IMG floating to left-->
+        <aside><img style="position: relative; float: left; left: 1rem;" src="../images/720sspider.jpg" width="400" height="300"></aside>
+        <h1 style="float: right; left: 4rem;">Mclaren 720s Spider</h1>
+        <p class="below" style="float: right;"></p>
+    </div>
+    <div>
+        <!-- IMG floating to right-->
+        <aside><img style="position: relative; float: right; right: 1rem;" src="../images/720s.jpg" width="400" height="300"></aside>
+        <h1 class="below1" style="float: left;">Mclaren 720s</h1>
+        <p class="below1" style="float: left;"></p>
+    </div>
+    <div>
+        <!-- IMG floating to left-->
+        <aside><img style="position: relative; float: left; left: 1rem;" src="../images/green765.jfif" width="400" height="300"></aside>
+        <h1 class="below" style="float: right;">Mclaren 765LT</h1>
+        <p class="below" style="float: right;"></p>
+    </div>
+
+
 
 </body>
 </html>
