I mostly completed the super series page but there is still the slideshow to do and cleaning up the stuff ive worked on i added images and tried to make everything look pretty

--- a/html/sseries.html
+++ b/html/sseries.html
@@ -14,26 +14,66 @@
         <h1><b>Mclaren Super Series</b></h1>
     </div>
     <div>
-        <img src="../images/drive.gif" height="700" width="900">
+        <img src="../images/drive.gif" height="700" width="1200">
         <!--Slideshow of like 6 colorways of the cars-->
     </div>
-    <div>
-        <!-- IMG floating to left-->
-        <aside><img style="position: relative; float: left; left: 1rem;" src="../images/720sspider.jpg" width="400" height="300"></aside>
-        <h1 style="float: right; left: 4rem;">Mclaren 720s Spider</h1>
-        <p class="below" style="float: right;"></p>
+    <br>
+    <br>
+    <div id="id2" >
+        <!-- IMG floating to left--> 
+        <h1 style="text-align: center;">Mclaren 720s Spider</h1>
+        <aside><img id="id1" style="position: relative; float: left; left: 4rem;" src="../images/720sspider.jpg" width="600" height="300"></aside>
+        <p class="below" style="float: right; width: 40%;">On the left is the 2019 Mclaren 720s Spider sports car in the color Black with a hint of Royal Blue.</p>
+        <ul >
+            <li>It has a V8 engine </li>
+            <li>Its maximum speed can reach up too 212 MPH(341 KPH)</li>
+            <li>Its 0 to 60 time is 2.9 seconds</li>
+            <li>Its maximum Hoursepower is 720 ps</li>
+            <li>The maximum torque on this beast is 770 Nm(568lbft)</li>
+            <li>This type of car gets an average of 19.0 MPG</li>
+        </ul>
     </div>
-    <div>
+    <br>
+    <br>
+    <br>
+    <div id="id2">
         <!-- IMG floating to right-->
-        <aside><img style="position: relative; float: right; right: 1rem;" src="../images/720s.jpg" width="400" height="300"></aside>
-        <h1 class="below1" style="float: left;">Mclaren 720s</h1>
-        <p class="below1" style="float: left;"></p>
+        <h1 class="below1" text-align="center">Mclaren 720s</h1>
+        <aside><img id="id1" class="below" style="position: relative; float: right; right: 4rem;" src="../images/720s.jpg" width="600" height="300"></aside>
+        <p class="below1" style="float: left; width: 40%;">The 2020 Mclaren 720s Sports Car is a very exciting product which has been in production for around 4 years now.
+        </p>
+        <ul style="float: left;">
+            <li>The price of the lovely car is 284,745$</li>
+            <li>It has been rated a 10/10 car by Car and Driver</li>
+            <li>The type of engine is a 4.0-liter twin turbo V8</li>
+            <li> the transmission is a 7 speed dual clutch automatic</li>
+            <li>The products top speed is around 212 mph</li>
+            <li>Its 0-60 time is 2.8 seconds</li>
+            <li>Its horsepower is 710HP and the torque on the product is 568lbft</li>
+            <li>The milage on the car is 15mpg city and 22mpg highway</li>
+        </ul>
     </div>
-    <div>
+    <div id="id2">
         <!-- IMG floating to left-->
-        <aside><img style="position: relative; float: left; left: 1rem;" src="../images/green765.jfif" width="400" height="300"></aside>
-        <h1 class="below" style="float: right;">Mclaren 765LT</h1>
-        <p class="below" style="float: right;"></p>
+        <h1 class="below" style="text-align: center;">Mclaren 765LT</h1>
+        <aside><img id="id1" class="below1" style="position: relative; float: left; left: 9rem" src="../images/green765.jfif" width="600" height="300"></aside>
+        <p class="below" style="float: right; width: 40%;">The neon green Mclaren 765LT on the left is a sports car that has been in production for  </p>
+        <ul>
+            <li>Its top speed is 205 mph</li>
+            <li> 0-60 time is 2.7 seconds</li>
+            <li>The engine on the product is a 4.0L twin-turbo DOHC 32-valve V-8</li>
+            <li> The transmission is 7-speed twin-clutch auto</li>
+            <li>The horsepower on the product is 755HP and the torque is 590lbft</li>
+            <li>The milage is 15mpg city and 22mpg highway</li>
+        </ul>
+        <ul>
+            <li>Is Louvered carbon fiber front fenders</li>
+            <li>Alcantara® LT interior trim</li>
+            <li>Quad-pipe full-titanium sports exhaust system</li>
+            <li>Ultra-Lightweight 10-Spoke Forged Alloy Wheels with finished Platinum <br> and secured with titanium wheel bolts</li>
+            <li>Carbon Fibre Racing Seats or Power Adjust Heated Memory Sports Seats</li>
+            <li> McLaren Vehicle Lift</li>
+        </ul>
     </div>
 
 
