edit super series
Cleaned up errors and mistakes i previously made on this and it looks a lot nice and got all of the three divs to align at the bottom

--- a/html/sseries.html
+++ b/html/sseries.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="../images/logo.png">
     <link rel="stylesheet" href="../styles/background.css">
     <link rel="stylesheet" href="../styles/seriess.css">
     <meta charset="UTF-8">
@@ -19,12 +20,14 @@
     </div>
     <br>
     <br>
-    <div id="id2" >
+    <div >
         <!-- IMG floating to left--> 
         <h1 style="text-align: center;">Mclaren 720s Spider</h1>
         <aside><img id="id1" style="position: relative; float: left; left: 4rem;" src="../images/720sspider.jpg" width="600" height="300"></aside>
-        <p class="below" style="float: right; width: 40%;">On the left is the 2019 Mclaren 720s Spider sports car in the color Black with a hint of Royal Blue.</p>
-        <ul >
+        <p style="float: right; width: 40%;">On the left is the 2019 Mclaren 720s Spider sports car in the color Black with a hint of Royal Blue and it has been in production since 2017.</p>
+        <ul>
+            <li><h3>Specs</h3></li>
+            <li>Price's range from 315,000$ - 415,000$</li>
             <li>It has a V8 engine </li>
             <li>Its maximum speed can reach up too 212 MPH(341 KPH)</li>
             <li>Its 0 to 60 time is 2.9 seconds</li>
@@ -43,6 +46,7 @@
         <p class="below1" style="float: left; width: 40%;">The 2020 Mclaren 720s Sports Car is a very exciting product which has been in production for around 4 years now.
         </p>
         <ul style="float: left;">
+            <li><h3>Specs</h3></li>
             <li>The price of the lovely car is 284,745$</li>
             <li>It has been rated a 10/10 car by Car and Driver</li>
             <li>The type of engine is a 4.0-liter twin turbo V8</li>
@@ -53,26 +57,20 @@
             <li>The milage on the car is 15mpg city and 22mpg highway</li>
         </ul>
     </div>
-    <div id="id2">
+    <div style="width: 100%;" id="id2">
         <!-- IMG floating to left-->
         <h1 class="below" style="text-align: center;">Mclaren 765LT</h1>
-        <aside><img id="id1" class="below1" style="position: relative; float: left; left: 9rem" src="../images/green765.jfif" width="600" height="300"></aside>
-        <p class="below" style="float: right; width: 40%;">The neon green Mclaren 765LT on the left is a sports car that has been in production for  </p>
+        <aside><img id="id1" class="below1" style="position: relative; float: left; left: 2rem;" src="../images/green765.jfif" width="600" height="300"></aside>
+        <p class="below" style="float: right;width: 45%;">The neon green Mclaren 765LT on the left is a sports car that is brand new in 2021 and is excitng a lot of people! </p>
         <ul>
+            <li><h3>Specs</h3></li>
+            <li>The Price is 358,000$</li>
             <li>Its top speed is 205 mph</li>
             <li> 0-60 time is 2.7 seconds</li>
             <li>The engine on the product is a 4.0L twin-turbo DOHC 32-valve V-8</li>
             <li> The transmission is 7-speed twin-clutch auto</li>
             <li>The horsepower on the product is 755HP and the torque is 590lbft</li>
             <li>The milage is 15mpg city and 22mpg highway</li>
-        </ul>
-        <ul>
-            <li>Is Louvered carbon fiber front fenders</li>
-            <li>Alcantara® LT interior trim</li>
-            <li>Quad-pipe full-titanium sports exhaust system</li>
-            <li>Ultra-Lightweight 10-Spoke Forged Alloy Wheels with finished Platinum <br> and secured with titanium wheel bolts</li>
-            <li>Carbon Fibre Racing Seats or Power Adjust Heated Memory Sports Seats</li>
-            <li> McLaren Vehicle Lift</li>
         </ul>
     </div>
 
