Fixed html and js
Last push css and html got screwed up so i had ot fix it to make everyhting look and work right

--- a/html/sseries.html
+++ b/html/sseries.html
@@ -30,19 +30,19 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
-      <img id="id1" src="../images/drive.gif" height="600" width="1200" style="width:100%">
+      <img id="id1" src="../images/drive.gif" height="600" width="1000">
       <div class="text">Mclaren 720s</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-      <img id="id1" src="../images/765.gif" height="600" width="1200" style="width:100%">
+      <img id="id1" src="../images/765lt.gif" height="600" width="1000" >
       <div class="text">Mclaren 765LT</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
-      <img id="id1" src="../images/spider.gif" height="600" width="1200" style="width:100%">
+      <img id="id1" src="../images/cyanspider.gif" height="600" width="1000">
       <div class="text">Mclaren 720s Spider</div>
     </div>
   
@@ -114,7 +114,7 @@
         </ul>
     </div>
 
-<script src="../sseries.js"></script>
+<script src="../script/sseries.js"></script>
 
 </body>
 </html>
