--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/background.css">
+    <link rel="stylesheet" href="../styles/seriess.css">
 </head>
 <body>
-    <script src="script/script.js"></script>
+    <div style="border: #632A6B groove 1rem;">
+        <aside><img style="position: relative; float: left; left: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside>
+        <aside><img style="position: relative; float: right; right: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside>
+        <h1><b>Mclaren</b></h1>
+    </div>
+    <div class="slideshow-container">
+
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <img src="../images/2020_Launch_Car_4_BAT_3Q_v1_Website_Gallery_1600x900.jpg" style="width:100%">
+            <div class="text">Mclaren F1 Series</div>
+          </div>
+    
+        <div class="mySlides fade">
+          <a href="ultimate.html"><img src="../images/senna.gif" style="width:100%"></a>
+          <div class="text">Mclaren Ultimate Series</div>
+        </div>
+      
+        <div class="mySlides fade">
+          <a href="sseries.html"><img src="../images/drive.gif" style="width:100%"></a>
+          <div class="text">Mclaren Super Series</div>
+        </div>
+         <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <script src="../script/script.js"></script>
 </body>
 </html>
