--- a/html/ultimate.html
+++ b/html/ultimate.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div style="border: #632A6B groove 1rem;">
-        <aside><img style="position: relative; float: left; left: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside>
-        <aside><img style="position: relative; float: right; right: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside>
-        <h1><b>Mclaren Ultimte Series</b></h1>
+        <a href="index.html"><aside><img style="position: relative; float: left; left: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside></a>
+        <a href="index.html"><aside><img style="position: relative; float: right; right: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside></a>
+        <h1><b>Mclaren Ultimate Series</b></h1>
     </div>
     <!--<div>
         <img src="../images/senna.gif" height="700" width="1200">
@@ -46,7 +46,7 @@
       <img src="../images/speedtail.gif" style="width:100%">
       <div class="text">Mclaren Speedtail</div>
     </div>
-  
+    
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
