Capitalization Fixes and list style updated

--- a/html/ultimate.html
+++ b/html/ultimate.html
@@ -61,7 +61,7 @@
         <p class="below" style="float: right; width: 40%;">On the left is an all black 2021 Mclaren Elva, ranking among the quickest of cars on the market.</p>
         <ul >
             <li>MSRP starting at 1,695,000</li>
-            <li>twin-turbocharged 4.0-liter V-8</li>
+            <li>Twin-turbocharged 4.0-liter V-8</li>
             <li>Its 0 to 60 time is 2.6 seconds, and a top speed of 203mph</li>
             <li>804 horsepower</li>
             <li>590 lb-ft of torque</li>
@@ -79,7 +79,7 @@
         </p>
         <ul style="float: left;">
             <li>MSRP starting at 1,650,000</li>
-            <li>twin-turbocharged 4.0-liter V-8</li>
+            <li>Twin-turbocharged 4.0-liter V-8</li>
             <li>Its 0 to 60 time is 2.8 seconds, and a top speed of 210mph</li>
             <li>814 horsepower</li>
             <li>590 lb-ft of torque</li>
@@ -93,7 +93,7 @@
         <p class="below" style="float: right; width: 40%;">The Mclaren Senna as the fastest lap times of any Mclaren to date.</p>
         <ul>
             <li>MSRP starting at 1,200,000</li>
-            <li>twin-turbocharged 4.0-liter V-8</li>
+            <li>Twin-turbocharged 4.0-liter V-8</li>
             <li>Its 0 to 62 time is 2.8 seconds, and a top speed of 208mph</li>
             <li>814 horsepower</li>
             <li>590 lb-ft of torque</li>
@@ -108,7 +108,7 @@
         </p>
         <ul style="float: left;">
             <li>MSRP starting at 2,000,000</li>
-            <li>twin-turbocharged 4.0-liter V-8 and an electric motor.</li>
+            <li>Twin-turbocharged 4.0-liter V-8 and an electric motor.</li>
             <li>Its 0 to 60 time is 2.9 seconds, and a top speed of 250mph</li>
             <li>1035 horsepower</li>
             <li>848 lb-ft of torque</li>
