--- a/html/f1.html
+++ b/html/f1.html
@@ -3,10 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mclaren F1 Series</title>
+
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../styles/background.css" />
+    <link rel="stylesheet" href="../styles/f1.css" />
   </head>
   <body>
     <div></div>
-    <img
+    <div class="slideshow-container">
+      <!-- Full-width images with number and caption text -->
+      <div class="mySlides fade">
+        <img src="../images/f1-front.jpg" style="width: 100%" />
+      </div>
+      <div class="mySlides fade">
+        <img src="../images/f1-top-right.jpg" style="width: 100%" />
+      </div>
+      <div class="mySlides fade">
+        <img src="../images/f1-back-right.jpg" style="width: 100%" />
+      </div>
+
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <script src="../script/script.js"></script>
   </body>
 </html>
