Ultimate series added to homepage

--- a/html/index.html
+++ b/html/index.html
@@ -50,8 +50,12 @@
     <div id="id4">
       <h1 id="id3">F1 Series</h1>
     </div>
-    <div id="id4">
-      <h1 id="id3">Ultimate Series</h1>
+    <div id="id2">
+      <div id="id4">
+        <h1 id="id3">Ultimate Series</h1>
+        <p>The Mclaren Ultimate Series is an elite group of hypercars. They are very limited in production, so getting your hands on one will be tough, along with price points starting in the 6-figure range. There are 4 cars currently in production, the Elva, Senna, Senna GTR, and Speedtail. These cars offer speed, power, and beautiful aesthetics.</p>
+      </div>
+      <img id="speedtail" src="../images/speedtailhome.jpg" width="520" height="300">
     </div>
     <div id="id4">
       <h1 id="id3">Super Series</h1>
@@ -59,7 +63,7 @@
       Mclaren 765LT, Mclaren 720s, and the Mclaren 720s Spider. The Mclaren 765LT is the fastest out of the three when you compare 0-60 time with a time of 2.7 seconds.
       The Super series has much to offer to your likings! </p>
     </div>
-    <img id="id5" src="../images/lt.webp" width="500" height="200">
+    <img id="id5" src="../images/lt.webp" width="540" height="300">
     <script src="../script/script.js"></script>
 </body>
 </html>
