--- a/html/sseries.html
+++ b/html/sseries.html
@@ -16,8 +16,8 @@
     </div> 
 -->
     <div style="border: #632A6B groove 1rem;">
-        <a href="index.html"><aside><img style="position: relative; float: left; left: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside></a>
-        <a href="index.html"><aside><img style="position: relative; float: right; right: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside></a>
+        <a href="../index.html"><aside><img style="position: relative; float: left; left: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside></a>
+        <a href="../index.html"><aside><img style="position: relative; float: right; right: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside></a>
         <h1><b>Mclaren Super Series</b></h1>
     </div>
     <br>
