--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
   </head>
   <body>
     <div style="border: #632a6b groove 1rem">
-      <aside>
+      <aside id='mlogo'>
         <img
-          style="position: relative; float: left; left: 1rem; bottom: 5rem"
+          style="position: absolute; left: 1rem; top: 0"
           src="images/logo.png"
-          width="200"
-          height="250"
+          width="20%"
+          height="20%"
         />
       </aside>
-      <aside>
+      <aside id='mlogo'>
         <img
-          style="position: relative; float: right; right: 1rem; bottom: 5rem"
+          style="position: absolute; right: 1rem; top: 0"
           src="images/logo.png"
-          width="200"
-          height="250"
+          width="20%"
+          height="20%"
         />
       </aside>
       <!--
@@ -33,19 +33,19 @@
       <table>
         <tr>
           <td>
-            <p><a href="">Formula 1</a></p>
+            <p><a id="fontadjust" href="../mclarenCarSite/html/f1.html">Formula 1</a></p>
           </td>
+          <br>
           <td>
-            <p><a href="html/ultimate.html">Ultimate Series</a></p>
+            <p><a id="fontadjust" href="../mclarenCarSite/html/ultimate.html">Ultimate Series</a></p>
           </td>
+          <br>
           <td>
-            <p><a href="html/sseries.html">Super Series</a></p>
+            <p><a id="fontadjust" href="../mclarenCarSite/html/sseries.html">Super Series</a></p>
           </td>
         </tr>
       </table>
     </div>
-    <br />
-    <br />
     <div class="slideshow-container">
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
@@ -55,14 +55,14 @@
       </div>
 
       <div class="mySlides fade">
-        <a href="ultimate.html"
+        <a href="../mclarenCarSite/html/ultimate.html"
           ><img id="id1" src="images/senna.gif" style="width: 100%"
         /></a>
         <div class="text">Mclaren Ultimate Series</div>
       </div>
 
       <div class="mySlides fade">
-        <a href="sseries.html"
+        <a href="../mclarenCarSite/html/sseries.html"
           ><img id="id1" src="images/drive.gif" style="width: 100%"
         /></a>
         <div class="text">Mclaren Super Series</div>
@@ -88,8 +88,8 @@
       <img
         id="speedtail"
         src="images/speedtailhome.jpg"
-        width="520"
-        height="300"
+        width="35%"
+        height="35%"
       />
     </div>
     <div id="id4">
@@ -103,7 +103,7 @@
         to offer to your likings!
       </p>
     </div>
-    <img id="id5" src="images/lt.webp" width="520" height="300" />
+    <img id="id5" src="images/lt.webp" width="35%" height="35%" />
     <script src="script/script.js"></script>
   </body>
 </html>
