--- a/html/ultimate.html
+++ b/html/ultimate.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div style="border: #632A6B groove 1rem;">
-        <a href="index.html"><aside><img style="position: relative; float: left; left: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside></a>
-        <a href="index.html"><aside><img style="position: relative; float: right; right: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside></a>
+        <a href="../index.html"><aside><img style="position: relative; float: left; left: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside></a>
+        <a href="../index.html"><aside><img style="position: relative; float: right; right: 1rem; bottom: 3rem;" src="../images/logo.png" width="200" height="200" ></aside></a>
         <h1><b>Mclaren Ultimate Series</b></h1>
     </div>
     <!--<div>
