added f1 to index

--- a/index.html
+++ b/index.html
@@ -73,7 +73,17 @@
     </div>
     <div id="id4">
       <h1 id="id3">F1 Series</h1>
+      <p>
+        Mclaren is jumping back into F1 racing with their new 2020 model. Though
+        they havent won a grand prix since 2012 we are still excited to see this
+        new machine in action. This car has a lot going for it with new narrow
+        bodywork, narrow sidepods, gearbox improvements, and many other new
+        technologies. Mclaren is hopeful of coming back into the F1 racing scene
+        strong.
+      </p>
     </div>
+    <img id='id5' src="images/f1-back-right.jpg" width="520" height="300"
+
     <div id="id2">
       <div id="id4">
         <h1 id="id3">Ultimate Series</h1>
@@ -107,4 +117,3 @@
     <script src="script/script.js"></script>
   </body>
 </html>
-
