--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
       <table>
         <tr>
           <td>
-            <p><a id="fontadjust" href="../mclarenCarSite/html/f1.html">Formula 1</a></p>
+            <p><a id="fontadjust" href="html/f1.html">Formula 1</a></p>
           </td>
           <br>
           <td>
-            <p><a id="fontadjust" href="../mclarenCarSite/html/ultimate.html">Ultimate Series</a></p>
+            <p><a id="fontadjust" href="html/ultimate.html">Ultimate Series</a></p>
           </td>
           <br>
           <td>
-            <p><a id="fontadjust" href="../mclarenCarSite/html/sseries.html">Super Series</a></p>
+            <p><a id="fontadjust" href="html/sseries.html">Super Series</a></p>
           </td>
         </tr>
       </table>
@@ -55,14 +55,14 @@
       </div>
 
       <div class="mySlides fade">
-        <a href="../mclarenCarSite/html/ultimate.html"
+        <a href="html/ultimate.html"
           ><img id="id1" src="images/senna.gif" style="width: 100%"
         /></a>
         <div class="text">Mclaren Ultimate Series</div>
       </div>
 
       <div class="mySlides fade">
-        <a href="../mclarenCarSite/html/sseries.html"
+        <a href="html/sseries.html"
           ><img id="id1" src="images/drive.gif" style="width: 100%"
         /></a>
         <div class="text">Mclaren Super Series</div>
