Link and font fixes

--- a/html/sseries.html
+++ b/html/sseries.html
@@ -16,7 +16,7 @@
     </div> 
     -->
     <div style="border: #632a6b groove 1rem">
-      <a href="index.html"
+      <a href="../index.html"
         ><aside>
           <img
             style="position: relative; float: left; left: 1rem; bottom: 3rem"
@@ -25,7 +25,7 @@
             height="200"
           /></aside
       ></a>
-      <a href="index.html"
+      <a href="../index.html"
         ><aside>
           <img
             style="position: relative; float: right; right: 1rem; bottom: 3rem"
@@ -34,7 +34,7 @@
             height="200"
           /></aside
       ></a>
-      <h1><b>Mclaren Super Series</b></h1>
+      <h1>Mclaren Super Series</h1>
     </div>
     <br />
     <br />
