--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         strong.
       </p>
     </div>
-    <img id='id5' src="images/f1-back-right.jpg" width="520" height="300"
+    <img id='id5' src="images/f1-back-right.jpg" width="520" height="300">
 
     <div id="id2">
       <div id="id4">
