added br and changed width
chnaged withed to shorter percentage and added breaks between header and slideshows so its not cramed together

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </tr>
       </table>
     </div>
+    <br>
     <div class="slideshow-container">
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
@@ -71,6 +72,7 @@
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
+    <br>
     <div id="id4">
       <h1 id="id3">F1 Series</h1>
       <p>
@@ -82,7 +84,7 @@
         strong.
       </p>
     </div>
-    <img id='id5' src="images/f1-back-right.jpg" width="520" height="300">
+    <img id='id5' src="images/f1-back-right.jpg" width="33%" height="33%">
 
     <div id="id2">
       <div id="id4">
@@ -98,8 +100,8 @@
       <img
         id="speedtail"
         src="images/speedtailhome.jpg"
-        width="35%"
-        height="35%"
+        width="33%"
+        height="33%"
       />
     </div>
     <div id="id4">
@@ -113,7 +115,7 @@
         to offer to your likings!
       </p>
     </div>
-    <img id="id5" src="images/lt.webp" width="35%" height="35%" />
+    <img id="id5" src="images/lt.webp" width="33%" height="33%" />
     <script src="script/script.js"></script>
   </body>
 </html>
