--- a/html/f1.html
+++ b/html/f1.html
@@ -27,7 +27,16 @@
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-    <div></div>
+    <div>
+      <p>
+        With Mclaren's recent history in F1 people aren't so confident in the
+        car manufacturer's racing ability. They have reworked their car in order
+        to inspire confidence in their fans once again. And with these major
+        reworks and rule changes in the F1 scene they are rarring to get going
+        again.
+      </p>
+    </div>
+
     <script src="../script/script.js"></script>
   </body>
 </html>
